--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ __pycache__
 slurm-*
 checkpoints
 wandb
+learned-optimization
 
 usefull_commands.txt
 script_new_install.sh
@@ -21,3 +22,4 @@ clients.pickle
 
 downloads
 fashion_mnist
+cifar10
